# PeleC

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  count_lines.sh
CMake/: BuildPeleExe.cmake  BuildPelePhysicsLib.cmake  SetPeleCompileFlags.cmake
Source/: Advance.cpp  BCfill.cpp  Derive.H  Derive.cpp  Diffterm.H  Diffusion.H  EB.cpp  Geometry.H  Geometry.cpp  Hydro.H  Hydro.cpp  InitEB.cpp  LES.H  Make.package  Particle.cpp  PeleC.H  PeleC.cpp  PeleCUtilities.H  Setup.cpp  Timestep.H  Utilities.cpp  main.cpp
Submodules/PelePhysics/: .codespell-ignore-words  CONTRIBUTING.md  README.md
Submodules/PelePhysics/Mechanisms/: list_mech  list_qss_mech
Submodules/PelePhysics/Mechanisms/BurkeDryer/: mechanism.H
Submodules/PelePhysics/Mechanisms/C1-C2-NO/: mechanism.H  mechanism.inp
Submodules/PelePhysics/Mechanisms/C1-C2-NO_qss/: mechanism.H  qssa.yaml
Submodules/PelePhysics/Mechanisms/CH4_lean/: mechanism.H  mechanism.inp
Submodules/PelePhysics/Mechanisms/CH4_lean_qss/: mechanism.H  qssa.yaml
Submodules/PelePhysics/Mechanisms/CO2-H2O-N2-Ar-4spec/: README.md  mechanism.H  mechanism.cpp  mechanism.inp  mechanism.yaml
Submodules/PelePhysics/Mechanisms/Davis/: mechanism.H
Submodules/PelePhysics/Mechanisms/FFCM1_Red/: mechanism.H
Submodules/PelePhysics/Mechanisms/H2-CO-CO2-3spec/: mechanism.H
Submodules/PelePhysics/Mechanisms/IonizedAir/: mechanism.H
Submodules/PelePhysics/Mechanisms/JL4/: mechanism.H
Submodules/PelePhysics/Mechanisms/Kolla/: mechanism.H
Submodules/PelePhysics/Mechanisms/LiDryer/: mechanism.H
Submodules/PelePhysics/Mechanisms/LuDME/: mechanism.H
Submodules/PelePhysics/Mechanisms/LuEthylene/: mechanism.H
Submodules/PelePhysics/Mechanisms/LuEthylene_qss/: mechanism.H  qssa.yaml
Submodules/PelePhysics/Mechanisms/Null/: mechanism.cpp
Submodules/PelePhysics/Mechanisms/POLIMI2020/: mechanism.inp  mechanism.yaml
Submodules/PelePhysics/Mechanisms/SootReaction/: mechanism.H
Submodules/PelePhysics/Mechanisms/air/: mechanism.H
Submodules/PelePhysics/Mechanisms/alzeta/: ALZ_F-MechC.cti  mechanism.H
Submodules/PelePhysics/Mechanisms/chem-CH4-2step/: mechanism.H
Submodules/PelePhysics/Mechanisms/chem-H/: mechanism.H
Submodules/PelePhysics/Mechanisms/decane_3sp/: mechanism.H
Submodules/PelePhysics/Mechanisms/dodecane_lu/: mechanism.H
Submodules/PelePhysics/Mechanisms/dodecane_lu_qss/: qssa.yaml
Submodules/PelePhysics/Mechanisms/dodecane_wang/: mechanism.H
Submodules/PelePhysics/Mechanisms/dodmethair_4sp/: mechanism.H
Submodules/PelePhysics/Mechanisms/drm19/: mechanism.H
Submodules/PelePhysics/Mechanisms/ethylene_af/: mechanism.H
Submodules/PelePhysics/Mechanisms/fuellib_posf_nonreacting/: LJ-WellDepth.py  README.md  mechanism.H  mechanism.cpp  mechanism.inp  mechanism.yaml  ref-compounds.csv
Submodules/PelePhysics/Mechanisms/grimech12/: mechanism.H
Submodules/PelePhysics/Mechanisms/grimech30/: mechanism.H
Submodules/PelePhysics/Mechanisms/grimech30-noArN/: mechanism.H
Submodules/PelePhysics/Mechanisms/heptane_3sp/: mechanism.H
Submodules/PelePhysics/Mechanisms/heptane_fc/: mechanism.H
Submodules/PelePhysics/Mechanisms/heptane_lu_88sk/: TRANFILE_APPEND.txt  TRANFILE_APPEND_upper.txt  mechanism.H
Submodules/PelePhysics/Mechanisms/heptane_lu_qss/: mechanism.H  qssa.yaml
Submodules/PelePhysics/Mechanisms/liquid_fuels_nonreacting/: README.md  mechanism.H  mechanism.cpp  mechanism.inp  mechanism.yaml
Submodules/PelePhysics/Mechanisms/methaneIons_diRenzo/: convert.sh  mechanism.H
Submodules/PelePhysics/Mechanisms/ndodecane_35/: mechanism.H
Submodules/PelePhysics/Mechanisms/nitrogens/: mechanism.H
Submodules/PelePhysics/Mechanisms/posf10325/: Make.package  README.md  mechanism.H  mechanism.cpp  mechanism.inp  mechanism.yaml
Submodules/PelePhysics/Mechanisms/posf10325_qss/: README.md  mechanism.H  qssa.yaml  (+2 more)
Submodules/PelePhysics/Submodules/sundials/src/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/arkode/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/arkode/xbraid/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/cvode/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/cvodes/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/ida/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/idas/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/kinsol/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/nvector/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/nvector/serial/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunadaptcontroller/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunadaptcontroller/imexgus/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunadaptcontroller/soderlind/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sundials/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunlinsol/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunlinsol/dense/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunlinsol/klu/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunlinsol/spgmr/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunmatrix/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunmatrix/band/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunmatrix/dense/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunmatrix/sparse/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunmemory/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunmemory/system/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunnonlinsol/: CMakeLists.txt
Submodules/PelePhysics/Submodules/sundials/src/sunnonlinsol/fixedpoint/: CMakeLists.txt
Submodules/PelePhysics/Testing/Exec/Radiation/: CMakeLists.txt  tstPOneMulti.cpp  tstPOneMultiAF.cpp  tstPOneMultiEB.cpp  tstPOneSingle.cpp  tstPOneSingleAF.cpp  tstPOneSingleEB.cpp
(+155 files in other folders)
